tests/ui/parser/missing_right_paren.stderr
error: this file contains an unclosed delimiter
  --> $DIR/missing_right_paren.rs:4:11
   |
LL | fn main((ؼ
   |        -- ^
   |        ||
   |        |unclosed delimiter
   |        unclosed delimiter

error: this file contains an unclosed delimiter
  --> $DIR/missing_right_paren.rs:4:11
   |
LL | fn main((ؼ
   |        -- ^
   |        ||
   |        |unclosed delimiter
   |        unclosed delimiter

error: aborting due to 2 previous errors

